--- a/src/app/ui/appbar/appbar.component.html
+++ b/src/app/ui/appbar/appbar.component.html
@@ -16,9 +16,9 @@
               <a class="uk-navbar-item">
                 <span uk-icon="cart"></span></a>
             </li>
-            <li class="uk-parent">
+            <!-- <li class="uk-parent">
               <a class="uk-navbar-item"><span uk-icon="heart"></span></a>
-            </li>
+            </li> -->
             <li>
               <a class="uk-navbar-item"><span uk-icon="sign-out"></span>SignIn/SignUp</a>
             </li>
