--- a/src/app/shop/page-listing/page-listing.component.html
+++ b/src/app/shop/page-listing/page-listing.component.html
@@ -3,8 +3,8 @@
 <div id="right-col" class="uk-section uk-section-default">
   <div class="uk-container">
     <div class="uk-margin uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid>
-      <span *ngFor="let product of products">
-        <!-- | filterByBrand: selectedBrand -->
+      <span [title]="product.name + ' product details'" [routerLink]="['/products', product.id]"
+        *ngFor="let product of products">
         <div>
           <div class="uk-animation-toggle" tabindex="0">
             <div class="uk-margin uk-card uk-card-default uk-card-hover uk-animation-shake">
