--- a/src/app/shop/page-product-details/page-product-details.component.html
+++ b/src/app/shop/page-product-details/page-product-details.component.html
@@ -1,1 +1,34 @@
-<p>page-product-details works!</p>
+<div class=" uk-margin uk-grid-small uk-text-center uk-grid" uk-grid>
+  <div class="uk-width-1-3@m">
+    <div class="uk-card uk-card-body">
+      <img src="{{ productdetails.images }}" />
+    </div>
+  </div>
+  <div class="uk-width-expand@m">
+    <div class="uk-card uk-card-body">
+      <h2>Product Details</h2>
+      <div class="pname">
+        Product Name
+        <p class=content>{{productdetails.name }}</p>
+      </div>
+      <div class="pdesc">
+        Product Description
+        <p class=content> {{ productdetails.description }}</p>
+      </div>
+      <div class="pcat">
+        Product Brand
+        <p class=content> {{ productdetails.brandId }}</p>
+      </div>
+      <div class="ppri">
+        Product Price
+        <p class="content pr">{{ productdetails.price }}</p>
+      </div>
+      <div class=" pprod">
+        Product Category
+        <p class="content cat"> {{ productdetails.categoryId }}</p>
+      </div>
+      <div><button class="uk-button uk-button-danger">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+</div>
