--- a/src/app/shop/widgets/filter-bar/filter-bar.component.html
+++ b/src/app/shop/widgets/filter-bar/filter-bar.component.html
@@ -1,40 +1,42 @@
-<aside id="left-col" class="uk-section uk-section-default uk-light">
-  <ul class="uk-list">
-    <li>
-      <div class="uk-block">
-        <span>By Category</span>
-      </div>
-      <div>
-        <select>
-          <option value="">All Categories</option>
-          <option *ngFor="let category of categories" [value]="category.id" [innerHtml]="category.name">
-          </option>
-        </select>
-      </div>
-    </li>
+<form [formGroup]="filterForm">
+  <aside id="left-col" class="uk-section uk-section-default uk-light">
+    <ul class="uk-list">
+      <li>
+        <div class="uk-block">
+          <span>By Category</span>
+        </div>
+        <div>
+          <select formControlName="categoryId">
+            <option value="">All Categories</option>
+            <option *ngFor="let category of categories" [value]="category.id" [innerHtml]="category.name">
+            </option>
+          </select>
+        </div>
+      </li>
 
-    <li>
-      <div class="uk-block">
-        <span>By Brand</span>
-      </div>
-      <div>
-        <select>
-          <option value="">All Brands</option>
-          <option *ngFor="let brand of brands" [value]="brand.id" [innerHtml]="brand.name"></option>
-        </select>
-      </div>
-    </li>
-    <li>
-      <div class="uk-block">
-        <span>Sort by</span>
-      </div>
-      <div>
-        <select>
-          <option value="">By relevance</option>
-          <option value="low">By price low to high</option>
-          <option value="high">By price high to low</option>
-        </select>
-      </div>
-    </li>
-  </ul>
-</aside>
+      <li>
+        <div class="uk-block">
+          <span>By Brand</span>
+        </div>
+        <div>
+          <select formControlName="brandId">
+            <option value="">All Brands</option>
+            <option *ngFor="let brand of brands" [value]="brand.id" [innerHtml]="brand.name"></option>
+          </select>
+        </div>
+      </li>
+      <li>
+        <div class="uk-block">
+          <span>Sort by</span>
+        </div>
+        <div>
+          <select>
+            <option value="">By relevance</option>
+            <option value="low">By price low to high</option>
+            <option value="high">By price high to low</option>
+          </select>
+        </div>
+      </li>
+    </ul>
+  </aside>
+</form>
