--- a/src/app/auth/page-register/page-register.component.html
+++ b/src/app/auth/page-register/page-register.component.html
@@ -1,1 +1,79 @@
-<p>page-register works!</p>
+<div class="uk-section uk-section-muted uk-flex uk-flex-middle uk-animation-fade" uk-height-viewport>
+  <div class="uk-width-1-1">
+    <div class="uk-container">
+      <div class="uk-grid-margin uk-grid uk-grid-stack" uk-grid>
+        <div class="uk-width-1-1@m">
+          <div class="uk-margin uk-width-large uk-margin-auto uk-card uk-card-default uk-card-body uk-box-shadow-large">
+            <h3 class="uk-card-title uk-text-center">Register</h3>
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+              <div class="uk-margin">
+                <div class="uk-inline uk-width-1-1">
+                  <span class="uk-form-icon" uk-icon="icon: mail"></span>
+                  <input class="uk-input uk-form-large" type="text" formControlName="firstName" [ngClass]="{
+                      'is-invalid': submitted && f.firstName.errors
+                    }" />
+                  <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                    <div *ngIf="f.firstName.errors.required">
+                      First Name is required
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="uk-margin">
+                <div class="uk-inline uk-width-1-1">
+                  <span class="uk-form-icon" uk-icon="icon: lock"></span>
+                  <input class="uk-input uk-form-large" type="text" formControlName="lastName"
+                    [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                  <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                    <div *ngIf="f.lastName.errors.required">
+                      Last Name is required
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="uk-margin">
+                <div class="uk-inline uk-width-1-1">
+                  <span class="uk-form-icon" uk-icon="icon: mail"></span>
+                  <input class="uk-input uk-form-large" type="text" formControlName="username"
+                    [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                  <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                    <div *ngIf="f.username.errors.required">
+                      Username is required
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="uk-margin">
+                <div class="uk-inline uk-width-1-1">
+                  <span class="uk-form-icon" uk-icon="icon: lock"></span>
+                  <input class="uk-input uk-form-large" type="password" formControlName="password"
+                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">
+                      Password is required
+                    </div>
+                    <div *ngIf="f.password.errors.minlength">
+                      Password must be at least 6 characters
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="uk-margin">
+                <button class="uk-button uk-button uk-button-large uk-width-1-1">
+                  Register
+                </button>
+              </div>
+              <div class="uk-text-small uk-text-center">
+                Already have an account?
+                <a [routerLink]="['/login']" uk-switcher-item="1">Log in</a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
