--- a/src/app/ui/appbar/appbar.component.html
+++ b/src/app/ui/appbar/appbar.component.html
@@ -3,25 +3,26 @@
     <div class="uk-container uk-container-expand">
       <div class="uk-navbar">
         <div class="uk-navbar-left">
-          <a class="uk-navbar-item uk-logo">Logo</a>
+          <a class="uk-navbar-item uk-logo" routerLink="/">Logo</a>
         </div>
         <div class="uk-navbar-right">
           <ul class="uk-navbar-nav">
-            <div *ngIf="currentUser">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link">Logout</a>
-              </div>
-            </div>
             <li class="uk-active">
               <a class="uk-navbar-item">
-                <span uk-icon="cart"></span></a>
+                <span [routerLink]="['cartdata']" uk-icon="cart"></span>
+                <span> </span>
+              </a>
             </li>
-            <!-- <li class="uk-parent">
-              <a class="uk-navbar-item"><span uk-icon="heart"></span></a>
-            </li> -->
-            <li>
-              <a class="uk-navbar-item"><span uk-icon="sign-out"></span>SignIn/SignUp</a>
-            </li>
+            <div *ngIf="currentUser">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" (click)="logout()">Logout</a>
+              </div>
+            </div>
+            <div *ngIf="!currentUser">
+              <li>
+                <a [routerLink]="['login']" class="uk-navbar-item"><span uk-icon="sign-out"></span>SignIn/SignUp</a>
+              </li>
+            </div>
           </ul>
         </div>
       </div>
